--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^12.2.0",
     "next": "16.1.6",
     "react": "19.2.4",
-    "react-dom": "19.2.4"
+    "react-dom": "19.2.4",
+    "react-player": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
